fixed spotify api bug on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -260,7 +260,6 @@ a:active {
 }
 
 .profile__picture_container {
-  margin-bottom: 1em;
   height: 204px;
 }
 
@@ -303,10 +302,6 @@ a:active {
   justify-content: center;
   color: var(--accent);
   font-size: 2.25rem;
-  background: linear-gradient(to top right, hsl(252deg 60% 65%) 0, hsl(0deg 100% 78% / 71%));
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 .intro__title>span {
